fix eye-scrollbar-color

--- a/src/stylus/setting/_color.styl
+++ b/src/stylus/setting/_color.styl
@@ -88,7 +88,7 @@ c_pages = {
         txt: c_eye_black,
         selectBg: c_eye_violet,
         selectTxt: c_eye_pink_light,
-        scrollbar: c_eye_pink_light,
-        scrollbarThumb: c_eye_blue
+        scrollbar: c_eye_blue,
+        scrollbarThumb: c_eye_pink
     }
 }
